# vibe

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  PROPOSAL.md  README.md  VERSIONING.md  mcp_config.json  pyproject.toml  requirements.txt  run_pipeline.py  run_server.py  setup_dependencies.sh  test_components.py  test_e2e.py  verify_setup.py
agents/: README.md  __init__.py  cli.py  mcp_configs.json
agents/experimenter/: __init__.py  server.py
agents/prompts/: experimenter.md  researcher.md  writer.md
agents/researcher/: __init__.py  server.py
agents/writer/: __init__.py  server.py
data/: conferences.json  download_datasets.py  figure_styles.json
docs/: governance.md  product-proposal.md  system-design.md
docs/diagrams/: README.md  c4-component.md  c4-container.md  c4-context.md  data-flow.md  workflow.md
docs/specs/: agent-orchestrator.md  memory-context.md  observability-evals.md  retriever.md  serving-config.md  tools-apis.md
experiments/mlx_boosting/: mlx_gbdt.py  mlx_gbdt_optimized.py  run_experiment.py  run_full_benchmark.py
output/: paper_icml.tex  paper_neurips.blg  paper_neurips.tex  poster_neurips.tex  supplementary.tex
projects/attention_efficient_transformers/: README.md  project.json
projects/contrastrank_distillation/: README.md  project.json
projects/efficient_transformers_research/: README.md  project.json
projects/takto_preference_optimization/: README.md  project.json
projects/test_project/: .gitignore  README.md  project.json
shared/: __init__.py
src/: __init__.py  personas.py  server.py
src/agents/: __init__.py  base.py  client.py  experiment.py  orchestrator.py  research.py  reviewer.py  writer.py
src/apis/: arxiv.py  huggingface.py  semantic_scholar.py
src/context/: __init__.py  extractor.py  profiles.py  styles.py
src/db/: __init__.py  conferences.py  experiments_db.py  papers_cache.py  workflow.py
src/experiment/: __init__.py
src/paper/: __init__.py  ir.py  renderer.py
src/project/: __init__.py  git_ops.py  manager.py
src/state/: __init__.py  (+1 more)
tests/: conftest.py  test_ideas.py  test_integration.py  test_verification.py  test_workflow.py  test_writing.py
(+54 files in other folders)
