[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-mcp"
version = "0.3.0"
description = "End-to-end AI research pipeline MCP server for Cursor"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "ResearchMCP Team" }
]
keywords = ["mcp", "research", "ai", "arxiv", "papers", "experiments"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "arxiv>=2.1.0",
    "huggingface-hub>=0.20.0",
    "semanticscholar>=0.8.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.19.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
]
docker = [
    "docker>=7.0.0",
]

[project.scripts]
research-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100
